--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
 							<h3>Latest Messages</h3>
 							<%= content_tag :dl do %>
 								<% @global_messages.each do |m| %>
-									<%= render 'messages/msg_line', m: m, k: nil %>
+									<%#= render 'messages/msg_line', m: m, k: nil %>
 								<% end %>
 							<% end %>
 							
