--- a/app/views/shared/_tooltip_entries.html.erb
+++ b/app/views/shared/_tooltip_entries.html.erb
@@ -1,5 +1,5 @@
 <% content_for :javascripts do %>
-	<%= javascript_include_tag 'bootstrap-tooltip' %>
+	<%#= javascript_include_tag 'bootstrap-tooltip' %>
 	<script type="text/javascript" charset="utf-8">
 		$('span').tooltip();
 	</script>
