--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -1,35 +1,35 @@
 <%= f.error_notification %>
-<%= content_tag :fieldset do %>
+<%= content_tag :fieldset, id: 'vehicle' do %>
 	<%= content_tag :legend, 'Vehicle' %>
-	<div class="clearfix row">
-		<%= f.input :ref_no, label: 'Claim No.', wrapper_class: 'span4' %>
-		<%= f.input :date_of_loss, as: :string, input_html: {id: 'datepicker'}, wrapper_class: 'span4', placeholder: 'Click to select date', hint: 'Format: YYYY-MM-DD' %>
+	<div class="row">
+		<%= f.input :ref_no, label: 'Claim No.', wrapper_class: 'span4 control-group' %>
+		<%= f.input :date_of_loss, as: :string, input_html: {id: 'datepicker'}, wrapper_class: 'span4 control-group', placeholder: 'Click to select date', hint: 'Format: YYYY-MM-DD' %>
 	</div>
 	<%= f.input :vehicle, wrapper_class: 'clearfix', required: true do  %>
 		<%= f.input :year_model, collection: Entry::YEAR_MODELS, label: false, wrapper_html: { id: 'veh-year' }, prompt: 'Select Year' %>
 		<%= f.input :car_brand, label: false, wrapper_html: { id: 'veh-brand' } do %>
-		  <%= f.grouped_collection_select :car_brand_id,  @car_origins, :car_brands, :name, :id, :name, :include_blank => 'Select Brand' %>
+		  <%= f.grouped_collection_select :car_brand_id,  @car_origins, :car_brands, :name, :id, :name, include_blank: 'Select Brand' %>
 			<%= f.hint 'example: Toyota' %>
 		<% end %>
-		<%= f.input :car_model_id, collection:  @car_models, label: false, wrapper_html: { id: 'veh-model' }, :include_blank => 'Select Model/Type', hint: 'example: Fortuner' %>
-		<%= f.input :car_variant_id, collection:  @car_variants, label: false, wrapper_html: { id: 'veh-variant' }, :include_blank => 'Select Variant', hint: 'example: 2.5 G AT' %>
+		<%= f.input :car_model_id, collection:  @car_models, label: false, wrapper_html: { id: 'veh-model' }, include_blank: 'Select Model/Type', hint: 'example: Fortuner' %>
+		<%= f.input :car_variant_id, collection:  @car_variants, label: false, wrapper_html: { id: 'veh-variant' }, include_blank: 'Select Variant', hint: 'example: 2.5 G AT' %>
 		<%= link_to 'Click here', new_car_variant_path %>
 	<% end %>
-	<div class="clearfix row">
-		<%= f.input :plate_no, label: 'Plate Number', hint: "#{content_tag :strong, 'Proper format: XYZ-123'} (except diplomatic plates or conduction stickers)".html_safe, wrapper_class: 'span3' %>
-		<%= f.input :serial_no, label: 'Serial Number', hint: 'Make sure you put 17 digits here (international standard).', wrapper_class: 'span3' %>
-		<%= f.input :motor_no, label: 'Motor Number', wrapper_class: 'span3' %>
+	<div class="row">
+		<%= f.input :plate_no, label: 'Plate Number', hint: "#{content_tag :strong, 'Proper format: XYZ-123'} (except diplomatic plates or conduction stickers)".html_safe, wrapper_class: 'span3 control-group' %>
+		<%= f.input :serial_no, label: 'Serial Number', hint: 'Make sure you put 17 digits here (international standard).', wrapper_class: 'span3 control-group' %>
+		<%= f.input :motor_no, label: 'Motor Number', wrapper_class: 'span3 control-group' %>
 	</div>
-	<div class="clearfix row">
-		<%= f.input :deliver_to, required: true, wrapper_class: 'span6' do %>
-			<%= f.input :region, collection: @regions, label: false, wrapper_html: { id: 'regions' }, prompt: 'Select Region' %>
-			<%= f.input :city_id, collection: @cities, label: false, wrapper_html: { id: 'cities' }, prompt: 'Select Location' %>
+	<div class="row">
+		<%= f.input :deliver_to, required: true, wrapper_class: 'span6 control-group' do %>
+			<%= f.input :region, collection: @regions, label: false, wrapper_html: { id: 'regions' }, include_blank: 'Select Region' %>
+			<%= f.input :city_id, collection: @cities, label: false, wrapper_html: { id: 'cities' }, include_blank: 'Select Location' %>
 		<% end %>
-		<%= f.association :term, label: 'Credit Term Request', collection:  Term.all.map{ |t| [t.term_name, t.id]}, prompt: 'Select Term', wrapper_class: 'span3'  %>
+		<%= f.association :term, label: 'Credit Term Request', collection:  Term.all.map{ |t| [t.term_name, t.id]}, prompt: 'Select Term', wrapper_class: 'span3 control-group'  %>
 	</div>
 <% end %>
 
-<%#= render 'entries/attach_photos', f: f %>
+<%= render 'entries/attach_photos', f: f %>
 
 <%= render 'misc_details', f: f  %>
 <%#= render 'edit_parts_list', f: f %>
@@ -42,7 +42,7 @@
 
 <% content_for :javascripts do %>
 	<% stylesheet 'blitzer/jquery-ui-1.8.6.custom' %>
-	<%= javascript_include_tag 'jquery_nested_form', 'rails.validations' %>
+	<%= javascript_include_tag 'jquery_nested_form' %>
 	<script type="text/javascript" charset="utf-8">
 	$(function() {
 		$('#datepicker').datepicker({ 
