--- a/app/views/variances/_inputs.html.erb
+++ b/app/views/variances/_inputs.html.erb
@@ -52,8 +52,8 @@
 <% end %>
 
 <% content_for :javascripts do %>
-	<%= javascript_include_tag 'bootstrap-tooltip' %>
-	<%= javascript_include_tag 'bootstrap-popover' %>
+	<%#= javascript_include_tag 'bootstrap-tooltip' %>
+	<%#= javascript_include_tag 'bootstrap-popover' %>
 	<script type="text/javascript" charset="utf-8">
 		$('td').popover();
 	</script>
