--- a/app/views/cart/_thead.html.erb
+++ b/app/views/cart/_thead.html.erb
@@ -1,5 +1,4 @@
 <%= content_tag :thead do %>
-	<%= content_tag :th, 'Part Description', class: 'span3'  %>
-	<%= content_tag :th, 'Any Specs or Requirements?', class: 'span3'  %>
-	<%= content_tag :th, 'Status', class: 'span3 center'  %>
+	<%= content_tag :th, 'Part Description'  %>
+	<%= content_tag :th, 'Any Specs or Requirements?', class: 'txtcenter'  %>
 <% end %>
