--- a/app/assets/stylesheets/entries.css.scss
+++ b/app/assets/stylesheets/entries.css.scss
@@ -30,11 +30,17 @@
 	.specs { font-size: 13px; margin-left: 10px; padding: 1px 15px; }
 	}
 #search-results { 
-	li { background-color: #CCC; line-height: 25px; margin: 5px 0; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; }
-	li:hover { color: white; background-color: #0064CD; }
+	#parts-pagination { font-size: 90%;  }
+	.parts li { background-color: #F7F7F9; line-height: 25px; margin: 5px 0; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; }
+	.parts li:hover { color: white; background-color: #0064CD; }
 	.parts a { color: black; display: block; padding: 5px 8px;}
 	.parts a:hover { color: white; font-size: 1.1em; text-decoration: none; }
+	.parts .highlight { color: #DD1144; }
+	.parts a:hover .highlight { background-color: white; padding: 0 4px; }
+	.set { margin-bottom: 10px; }
  	}
+.index-floated { float: left; padding-right: 8px; text-align: right; width: 18px; }
+.parts-floated { float: left; }
 
 .photo-set li { display: inline; }
 
