--- a/app/views/cart/_cart.html.erb
+++ b/app/views/cart/_cart.html.erb
@@ -1,53 +1,33 @@
-<%= content_tag :div, '', id: 'search-results', class: 'row' %>
+<%= form_tag line_items_path(id: @entry) do %>
 
-<%# if @cart.cart_items.present? %>
-	<%= content_tag :h2, 'Parts List' %>
-	
-	<%= form_tag line_items_path(id: @entry) do %>
-
-		<%= content_tag :table, class: 'table' do %>
-			<%= render 'cart/thead' %>
-				
-			<% if @entry.line_items.present? %>
-				<%= content_tag :tr, (content_tag :th, 'Existing Parts', colspan: 3), class: 'well' %>
-				<% @entry.line_items.includes(:car_part).each_with_index do |item, index| %>
-					<%= content_tag :tr, id: "item_#{item.id}" do %>
-						<%= content_tag :td, class: 'span3' do %>
-							<%= content_tag :span, index + 1, class: 'label index'  %>
-							<%= content_tag :span, item.part_name %>
-						<% end %>
-						<%= content_tag :td, (text_field_tag "items[#{item.id}][]", item.specs), class: 'span3'  %>
-						<%= content_tag :td, "#{item.status} #{delete_link(item)}".html_safe, class: 'span3 center'  %>
-					<% end %>
-				<% end %>
-				<%= content_tag :tr, (content_tag :th, 'Additional Parts', colspan: 3), class: 'well' %>
-			<% end %>
+	<%= content_tag :table, class: 'table' do %>
+		<%= render 'cart/thead' %>
 			
-			<% if @cart.cart_items.present? %>
-				<% @cart.cart_items.each_with_index do |item, index| %>
-					<%= render 'cart/item', item: item, index: index %>
-				<% end %>
-			<% else %>
-				<%= content_tag :tr, (content_tag :th, 'Search for car parts using the search bar.', colspan: 3), class: 'highlight' %>
-			<% end %>
-				
-		<% end %>
-
-		<% if @cart.cart_items.present? || @entry.line_items.present? %>
-			<%= content_tag :div, class: 'well' do %>
-				<%= clear_cart_link(@entry) if @cart.cart_items.present? %>
-				<%= submit_tag 'Save Parts List', class: 'btn btn-success floatright'  %>
-				<%= link_to 'Cancel Editing', cancel_line_items_path(id: @entry), remote: true, class: 'btn' %>
+		<% if @entry.line_items.present? %>
+			<%= content_tag :tr, (content_tag :th, 'Existing Parts', colspan: 3), class: 'label label-cool' %>
+			<% @entry.line_items.includes(:car_part).each_with_index do |item, index| %>
+				<%= render 'cart/prev_item', item: item, index: index %>
 			<% end %>
 		<% end %>
 		
+		<% if @cart.cart_items.present? %>
+			<%= content_tag :tr, (content_tag :th, 'New Parts', colspan: 3), class: 'label label-cool' %>
+			<% @cart.cart_items.each_with_index do |item, index| %>
+				<%= render 'cart/item', item: item, index: index %>
+			<% end %>
+		<% end %>
+			
 	<% end %>
 
-	<%= render 'cart/search_form' %>
-
-<%# else %>
-<% unless @cart.cart_items.present? %>
-
-
+	<%# if @cart.cart_items.present? || @entry.line_items.present? %>
+		<%= content_tag :div, class: 'well' do %>
+		  <%= link_with_icon("", :back, 'backward') %>
+			<%= clear_cart_link(@entry) if @cart.cart_items.present? %>
+			<%= submit_tag 'Save Parts List', class: 'btn btn-success floatright'  %>
+			<%#= link_to 'Cancel Editing', cancel_line_items_path(id: @entry), remote: true, class: 'btn' %>
+		<% end %>
+	<%# end %>
+	
 <% end %>
 
+<%= render 'shared/tooltip_delete' %>
