--- a/app/views/layouts/layout2.html.erb
+++ b/app/views/layouts/layout2.html.erb
@@ -17,14 +17,14 @@
 	     <% flash.each do |name, msg| %>
 	       <%= content_tag :div, msg, class: "alert alert-block alert-#{name}" if msg.is_a?(String) %>
 	     <% end %>
-				<div class="row">
-					<div class="span12">
+				<!-- <div class="row">
+					<div class="span12"> -->
 						<div class="page-header">
 							<%= content_tag :h1, yield(:title) + ' '  + yield(:subtitle) %>
 						</div>
 		        <%= yield %>
-					</div> <!-- end of span16 -->
-				</div>
+					<!-- </div>  --><!-- end of span16 -->
+				<!-- </div> -->
     </div> <!--! end of .container -->
       <footer>
       </footer>
