--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -3,6 +3,11 @@
   <div class="navbar navbar-fixed-top">
      <div class="navbar-inner">
        <div class="container">
+         <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
+           <span class="icon-bar"></span>
+           <span class="icon-bar"></span>
+           <span class="icon-bar"></span>
+         </a>
 	      <%= link_to 'E-Bid', root_path, class: 'brand' %>
          <div class="nav-collapse">
  					<% if user_signed_in? %>
