--- a/lib/assets/stylesheets/print.css.less
+++ b/lib/assets/stylesheets/print.css.less
@@ -60,6 +60,14 @@ td.bids { padding-right: 20px; padding-left: 20px; }
 	.close { position: absolute; top: -2px; right: -15px; }
 	}
 
+.surrenders {
+	.address p { margin-bottom: 0; }
+	.prelims { font-weight: bold; }
+	.date, .address, .prelims.second, .parts { margin-bottom: 30px; }
+	.signature-line { margin-bottom: 50px; }
+	.retriever { padding-top: 5px; border-top: 1px solid black; }
+	}
+	
 @media print {
 	#print-header, #print-nav, form, #confirmation { display: none; }
 }
